# VisualNovelConstruct

./: .gitignore  CMakeLists.txt
include/gui/: AnimRectWithText.hpp  Background.hpp  BaseAnimObject.hpp  Button.hpp  GameGUI.hpp  Person.hpp  PhraseTextArea.hpp
include/logic/: GameLogic.hpp  Reader.hpp
lib/rapidxml-1.13/: CMakeLists.txt
scenes/prologue/: beginPhrase.xml
src/: main.cpp
src/gui/: AnimRectWithText.cpp  Background.cpp  BaseAnimObject.cpp  Button.cpp  GameGUI.cpp  Person.cpp  PhraseTextArea.cpp
src/logic/: GameLogic.cpp  Reader.cpp
